test/Bugs/NakedEllipsisWeirdError.err
AGDA_FAILURE

ret > ExitFailure 42
out > NakedEllipsisWeirdError.agda:3.1-4: error: [MissingTypeSignature.Function]
out > Missing type signature for left hand side ...
out > when scope checking the declaration
out >   ...
out >
